Interfaz de la vista inicial

--- a/src/main/java/nutricelia/com/InitialPage.html
+++ b/src/main/java/nutricelia/com/InitialPage.html
@@ -14,9 +14,9 @@
             <img src="../../res/NutriCelia.png" alt="Logo">
         </div>
         <h1>NutriCelia</h1>
-        <button type="submit" class="login-btn">Iniciar sesión</button>
-        <br>
-        <button type="submit" class="register-btn">Regístrate</button>
+
+        <button type="submit" class="Button">Iniciar sesión</button>
+        <button type="submit" class="Button">Regístrate</button>
     </div>
 </main>
 </body>
