Correcion tras merge

--- a/src/main/java/nutricelia/com/Vista/InitialPage.html
+++ b/src/main/java/nutricelia/com/Vista/InitialPage.html
@@ -11,12 +11,12 @@
 <main>
     <div class="box1">
         <div class="logo">
-            <img src="../../res/NutriCelia.png" alt="Logo">
+            <img src="../../../res/NutriCelia.png" alt="Logo">
         </div>
         <h1>NutriCelia</h1>
 
         <button type="submit" class="Button">Iniciar sesión</button>
-        <button type="submit" class="Button">Regístrate</button>
+        <button type="submit" class="Button">Regístrase</button>
     </div>
 </main>
 </body>
