--- a/src/main/java/nutricelia/com/Vista/InitialPage.html
+++ b/src/main/java/nutricelia/com/Vista/InitialPage.html
@@ -11,7 +11,7 @@
 <main>
     <div class="box1">
         <div class="logo">
-            <img src="../../../res/NutriCelia.png" alt="Logo">
+            <img src="../../../res/NutriCelia.png">
         </div>
         <h1>NutriCelia</h1>
 
