Creación de ficheros para las relaciones entre interfaces

--- a/src/main/java/nutricelia/com/Vista/HomePage.html
+++ b/src/main/java/nutricelia/com/Vista/HomePage.html
@@ -12,15 +12,17 @@
         <img src="../../../res/NutriCelia.png">
     </div>
     <nav>
-        <a href="#">Inicio</a>
+        <a href="HomePage.html">Inicio</a>
         <a href="#">Productos</a>
-        <a href="#">Mis Listas</a>
-        <a href="#">Recetas</a>
-        <a href="#">Foros</a>
+        <a href="ShoppingListPage.html">Mis Listas</a>
+        <a href="ReceipeListPage.html">Recetas</a>
+        <a href="ForumPage.html">Foros</a>
     </nav>
     <div class="user-profile">
         <img class="menu" src="../../../res/menu-icon.png">
-        <button class="user-profile"><img src="../../../res/icon-user.png"></button>
+        <a href="UserDataPage.html">
+            <button class="user-profile"><img src="../../../res/icon-user.png"></button>
+        </a>
     </div>
 </header>
 <h1>Bienvenido a NutriCelia</h1>
@@ -31,8 +33,10 @@
             <div class="shopping">
                 <img src="../../../res/shopping-list.png">
             </div>
+            <a href="ShoppingListPage.html">
+                <button class="btn">Ver mis listas</button>
+            </a>
 
-            <button class="btn">Ver mis listas</button>
         </section>
 
         <section class="recipes">
@@ -40,8 +44,10 @@
             <div class="image-container">
                 <img src="../../../res/gluten-free.png">
             </div>
+            <a href="ReceipeListPage.html">
+                <button class="btn">Ver Recetas</button>
+            </a>
 
-            <button class="btn">Ver Recetas</button>
         </section>
 
         <section class="forums">
@@ -49,7 +55,10 @@
             <div class="shopping">
                 <img src="../../../res/forum.png">
             </div>
-            <button class="btn">Consultar foros</button>
+            <a href="ForumPage.html"><button class="btn" >
+                Consultar foros</button>
+            </a>
+
         </section>
     </div>
 
