--- a/src/main/java/nutricelia/com/Vista/InitialPage.html
+++ b/src/main/java/nutricelia/com/Vista/InitialPage.html
@@ -15,8 +15,12 @@
         </div>
         <h1>NutriCelia</h1>
 
-        <button type="submit" class="Button">Iniciar sesión</button>
-        <button type="submit" class="Button">Regístrase</button>
+        <a href="HomePage.html">
+            <button class="Button">Iniciar sesión</button>
+        </a>
+        <a href="SignUpPage.html">
+            <button type="submit" class="Button">Registrarse</button>
+        </a>
     </div>
 </main>
 </body>
