Creación interfaz userData

--- a/src/main/java/nutricelia/com/Vista/HomePage.html
+++ b/src/main/java/nutricelia/com/Vista/HomePage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Principal - NutriCelia</title>
-    <link rel="stylesheet" href="HomePage.css">
+    <link rel="stylesheet" href="HomeScreen.css">
 </head>
 <body>
 <header>
@@ -14,13 +14,13 @@
     <nav>
         <a href="HomePage.html">Inicio</a>
         <a href="#">Productos</a>
-        <a href="ShoppingListPage.html">Mis Listas</a>
-        <a href="ReceipeListPage.html">Recetas</a>
-        <a href="ForumPage.html">Foros</a>
+        <a href="ShoppingListScreen.html">Mis Listas</a>
+        <a href="ReceipeListScreen.html">Recetas</a>
+        <a href="ForumScreen.html">Foros</a>
     </nav>
     <div class="user-profile">
         <img class="menu" src="../../../res/menu-icon.png">
-        <a href="UserDataPage.html">
+        <a href="UserDataScreen.html">
             <button class="user-profile"><img src="../../../res/icon-user.png"></button>
         </a>
     </div>
@@ -33,7 +33,7 @@
             <div class="shopping">
                 <img src="../../../res/shopping-list.png">
             </div>
-            <a href="ShoppingListPage.html">
+            <a href="ShoppingListScreen.html">
                 <button class="btn">Ver mis listas</button>
             </a>
 
@@ -44,7 +44,7 @@
             <div class="image-container">
                 <img src="../../../res/gluten-free.png">
             </div>
-            <a href="ReceipeListPage.html">
+            <a href="ReceipeListScreen.html">
                 <button class="btn">Ver Recetas</button>
             </a>
 
@@ -55,7 +55,7 @@
             <div class="shopping">
                 <img src="../../../res/forum.png">
             </div>
-            <a href="ForumPage.html"><button class="btn" >
+            <a href="ForumScreen.html"><button class="btn" >
                 Consultar foros</button>
             </a>
 
