--- a/src/main/java/nutricelia/com/Vista/InitialPage.html
+++ b/src/main/java/nutricelia/com/Vista/InitialPage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
-    <link rel="stylesheet" href="InitialPage.css">
+    <link rel="stylesheet" href="InitialScreen.css">
 </head>
 <body>
 
@@ -18,7 +18,7 @@
         <a href="HomePage.html">
             <button class="Button">Iniciar sesión</button>
         </a>
-        <a href="SignUpPage.html">
+        <a href="SignUpScreen.html">
             <button type="submit" class="Button">Registrarse</button>
         </a>
     </div>
