--- a/src/main/resources/META-INF/resources/HomePage.html
+++ b/src/main/resources/META-INF/resources/HomePage.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Principal - NutriCelia</title>
-    <link rel="stylesheet" href="HomePage.css">
+    <link rel="stylesheet" href="css/HomePage.css">
 </head>
 <body>
 <header>
     <div class="logo">
-        <img src="../../../res/NutriCelia.png">
+        <img src="images/NutriCelia.png">
     </div>
     <nav>
         <a href="HomePage.html">Inicio</a>
@@ -19,9 +19,9 @@
         <a href="ForumPage.html">Foros</a>
     </nav>
     <div class="user-profile">
-        <img class="menu" src="../../../res/menu-icon.png">
+        <img class="menu" src="images/menu-icon.png">
         <a href="UserDataPage.html">
-            <button class="user-profile"><img src="../../../res/icon-user.png"></button>
+            <button class="user-profile"><img src="images/icon-user.png"></button>
         </a>
     </div>
 </header>
@@ -31,7 +31,7 @@
         <section class="shopping-lists">
             <h2>Mis Listas de Compra</h2>
             <div class="shopping">
-                <img src="../../../res/shopping-list.png">
+                <img src="images/shopping-list.png">
             </div>
             <a href="ShoppingListPage.html">
                 <button class="btn">Ver mis listas</button>
@@ -53,7 +53,7 @@
         <section class="forums">
             <h2>Foros de Discusión</h2>
             <div class="shopping">
-                <img src="../../../res/forum.png">
+                <img src="images/forum.png">
             </div>
             <a href="ForumPage.html"><button class="btn" >
                 Consultar foros</button>
