conexion de interfaces con quarkus

--- a/src/main/resources/META-INF/resources/UserScreens/DeletedPage.html
+++ b/src/main/resources/META-INF/resources/UserScreens/DeletedPage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Usuario Eliminado</title>
-    <link rel="stylesheet" href="userstyles.css">
+    <link rel="stylesheet" href="../css/userstyles.css">
 </head>
 <body>
 <header>
