--- a/src/main/resources/META-INF/resources/UserScreens/SignInPage.html
+++ b/src/main/resources/META-INF/resources/UserScreens/SignInPage.html
@@ -2,25 +2,22 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Sign Up</title>
-    <link rel="stylesheet" href="userstyles.css">
+    <title>Sign In</title>
+    <link rel="stylesheet" href="../css/userstyles.css">
 </head>
 <body>
 <header>
-    <h1>Registro</h1>
+    <h1>Iniciar Sesión</h1>
 </header>
 <main>
-    <form action="http://localhost:8080/user" method="post">
-        <label for="name">Nombre:</label>
-        <input type="text" id="name" name="name" required>
-
+    <form action="http://localhost:8080/auth/login" method="post">
         <label for="email">Correo Electrónico:</label>
         <input type="email" id="email" name="email" required>
 
         <label for="password">Contraseña:</label>
         <input type="password" id="password" name="password" required>
 
-        <button type="submit" class="btn">Registrarse</button>
+        <button type="submit" class="btn">Iniciar Sesión</button>
     </form>
 </main>
 </body>
