--- a/src/main/resources/META-INF/resources/UserScreens/UserDataPage.html
+++ b/src/main/resources/META-INF/resources/UserScreens/UserDataPage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Perfil</title>
-    <link rel="stylesheet" href="userstyles.css">
+    <link rel="stylesheet" href="../css/userstyles.css">
 </head>
 <body>
     <h1>Perfil de usuario</h1>
