Corrección algunos errores

--- a/src/main/resources/META-INF/resources/HomePage.html
+++ b/src/main/resources/META-INF/resources/HomePage.html
@@ -20,7 +20,7 @@
     </nav>
     <div class="user-profile">
         <img class="menu" src="images/menu-icon.png">
-        <a href="UserDataPage.html">
+        <a href="UserScreens/UserDataPage.html">
             <button class="user-profile"><img src="images/icon-user.png"></button>
         </a>
     </div>
@@ -42,7 +42,7 @@
         <section class="recipes">
             <h2>Recetas para Celíacos</h2>
             <div class="image-container">
-                <img src="../../../res/gluten-free.png">
+                <img src="images/gluten-free.png">
             </div>
             <a href="ReceipeListPage.html">
                 <button class="btn">Ver Recetas</button>
