--- a/src/main/resources/META-INF/resources/InitialPage.html
+++ b/src/main/resources/META-INF/resources/InitialPage.html
@@ -15,7 +15,7 @@
         </div>
         <h1>NutriCelia</h1>
 
-        <a href="HomePage.html">
+        <a href="UserScreens/SignInPage.html">
             <button class="Button">Iniciar sesión</button>
         </a>
         <a href="UserScreens/SignUpPage.html">
