--- a/src/main/resources/META-INF/resources/UserScreens/UserDataPage.html
+++ b/src/main/resources/META-INF/resources/UserScreens/UserDataPage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Datos del Usuario - NutriCelia</title>
-    <link rel="stylesheet" href="../css/UserData.css">
+    <link rel="stylesheet" href="../css/userstyles.css">
 </head>
 <body>
 <header>
