--- a/src/main/resources/META-INF/resources/BuyListScreens/ShoppingListPage.html
+++ b/src/main/resources/META-INF/resources/BuyListScreens/ShoppingListPage.html
@@ -25,28 +25,28 @@
         </a>
     </div>
 </header>
-<h1>Mis Datos</h1>
+<h1>Listas de la compra</h1>
 <main>
     <section class="user-data">
-        <div class="data-container">
-            <div class="data-field">
-                <label>Nombre:</label>
-                <p class="data-value">Juan Pérez</p>
-            </div>
-            <div class="data-field">
-                <label>Edad:</label>
-                <p class="data-value">30 años</p>
-            </div>
-            <div class="data-field">
-                <label>Correo Electrónico:</label>
-                <p class="data-value">juan.perez@example.com</p>
-            </div>
-            <div class="data-field">
-                <label>Teléfono:</label>
-                <p class="data-value">123456789</p>
-            </div>
-        </div>
+        hola
     </section>
+    <section class="user-data">
+        hola
+    </section>
+    <form action="http://localhost:8080/buyListResource" method="get">
+        <label for="name">Nombre:</label>
+        <input type="text" id="name" name="name" required>
+
+        <label for="email">Correo Electrónico:</label>
+        <input type="email" id="email" name="email" required>
+
+        <label for="password">Contraseña:</label>
+        <input type="password" id="password" name="password" required>
+
+        <button type="submit" class="btn">Registrarse</button>
+    </form>
+
+
 </main>
 </body>
 </html>
