--- a/src/main/resources/META-INF/resources/BuyListScreens/ShoppingListPage.html
+++ b/src/main/resources/META-INF/resources/BuyListScreens/ShoppingListPage.html
@@ -28,25 +28,17 @@
 <h1>Listas de la compra</h1>
 <main>
     <section class="user-data">
-        hola
+        Place Holder Lista
     </section>
     <section class="user-data">
-        hola
+        Place Holder Lista
     </section>
-    <form action="http://localhost:8080/buyListResource" method="get">
-        <label for="name">Nombre:</label>
-        <input type="text" id="name" name="name" required>
-
-        <label for="email">Correo Electrónico:</label>
-        <input type="email" id="email" name="email" required>
-
-        <label for="password">Contraseña:</label>
-        <input type="password" id="password" name="password" required>
-
-        <button type="submit" class="btn">Registrarse</button>
-    </form>
-
-
+    <section class="user-data">
+        Place Holder Lista
+    </section>
+    <section class="user-data">
+        Place Holder Lista
+    </section>
 </main>
 </body>
 </html>
