--- a/src/main/resources/META-INF/resources/UserScreens/SignInPage.html
+++ b/src/main/resources/META-INF/resources/UserScreens/SignInPage.html
@@ -10,7 +10,7 @@
     <h1>Iniciar Sesión</h1>
 </header>
 <main>
-    <form action="http://localhost:8080/auth/login" method="post">
+    <form id="loginForm">
         <label for="email">Correo Electrónico:</label>
         <input type="email" id="email" name="email" required>
 
@@ -20,5 +20,42 @@
         <button type="submit" class="btn">Iniciar Sesión</button>
     </form>
 </main>
+
+<script>
+    document.getElementById("loginForm").addEventListener("submit", async function(event) {
+        event.preventDefault(); // Evita el envío tradicional del formulario
+
+        const email = document.getElementById("email").value;
+        const password = document.getElementById("password").value;
+
+        const loginData = { email: email, password: password };
+
+        try {
+            const response = await fetch("http://localhost:8080/auth/login", {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify(loginData)
+            });
+
+            if (response.ok) {
+                const token = await response.text(); // Recibimos el JWT como string
+
+                // Guardamos el token en localStorage (puedes usar sessionStorage si prefieres)
+                localStorage.setItem("token", token);
+
+                alert("Inicio de sesión exitoso.");
+                window.location.href = "../HomePage.html"; // Redirigir a la página de inicio
+            } else {
+                alert("Error al iniciar sesión. Verifica tus credenciales.");
+            }
+        } catch (error) {
+            console.error("Error en el inicio de sesión:", error);
+            alert("Error al conectar con el servidor.");
+        }
+    });
+</script>
+
 </body>
 </html>
