Creación web del historial
Y refactors de las webs del ShoppingList

--- a/src/main/resources/META-INF/resources/ProductHistory/ProductHistoryPage.html
+++ b/src/main/resources/META-INF/resources/ProductHistory/ProductHistoryPage.html
@@ -62,6 +62,6 @@
     </section>
 </main>
 
-<script src="../js/ListingPage.js"></script>
+<script src="../js/ProductHistoryMain.js"></script>
 </body>
 </html>
