Cerrado y borrado de cuenta

--- a/src/main/resources/META-INF/resources/UserScreens/SignOutPage.html
+++ b/src/main/resources/META-INF/resources/UserScreens/SignOutPage.html
@@ -7,7 +7,14 @@
 </head>
 <body>
 <header>
-    <h1>Sesión Cerrada</h1>
+    <div class="logo">
+        <a href="../InitialPage.html">
+            <img src="../images/NutriCelia.png" alt="Logo">
+        </a>
+    </div>
+    <div class="titulo">
+        <h1>Sesión cerrada</h1>
+    </div>
 </header>
 <main>
     <p>Has cerrado sesión correctamente.</p>
