--- a/src/main/resources/META-INF/resources/UserScreens/SignInPage.html
+++ b/src/main/resources/META-INF/resources/UserScreens/SignInPage.html
@@ -7,7 +7,14 @@
 </head>
 <body>
 <header>
-    <h1>Iniciar Sesión</h1>
+    <div class="logo">
+        <a href="../InitialPage.html">
+            <img src="../images/NutriCelia.png" alt="Logo">
+        </a>
+    </div>
+    <div class="titulo">
+        <h1>Iniciar sesión</h1>
+    </div>
 </header>
 <main>
     <form id="loginForm">
