--- a/src/main/resources/META-INF/resources/UserScreens/UserDataPage.html
+++ b/src/main/resources/META-INF/resources/UserScreens/UserDataPage.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/userstyles.css">
 </head>
 <body>
+
 <header>
     <div class="logo">
         <a href="../HomePage.html">
@@ -14,15 +15,15 @@
         </a>
     </div>
     <nav>
-        <a href="HomePage.html">Inicio</a>
+        <a href="../HomePage.html">Inicio</a>
         <a href="#">Productos</a>
-        <a href="ShoppingListScreen.html">Mis Listas</a>
-        <a href="ReceipeListScreen.html">Recetas</a>
-        <a href="ForumScreen.html">Foros</a>
+        <a href="../ShoppingListPage.html">Mis Listas</a>
+        <a href="../ReceipeListPage.html">Recetas</a>
+        <a href="../ForumPage.html">Foros</a>
     </nav>
     <div class="user-profile">
         <img class="menu" src="../images/menu-icon.png">
-        <a href="UserDataScreen.html">
+        <a href="UserDataPage.html">
             <button class="user-profile"><img src="../images/icon-user.png"></button>
         </a>
     </div>
@@ -33,7 +34,7 @@
 <main>
     <section class="user-data">
         <div class="data-container">
-            <button onclick="modifyAccount()" class="btn btn-modify">Modificar datos</button>
+            <button onclick="modifyAccount()" class="btn btn-modify">Modificar usuario</button>
             <div class="data-field">
                 <label>Nombre:</label>
                 <p id="user-name" class="data-value">Cargando...</p>
@@ -50,7 +51,15 @@
         <button onclick="deleteAccount()" class="btn btn-delete">Eliminar cuenta</button>
     </section>
 </main>
-
+<div id="editPopup" class="popup">
+    <div class="popup-content">
+        <button class="close-btn" onclick="closePopup()">&times;</button>
+        <h2>Modificar</h2>
+        <label for="new-name">Nuevo nombre de usuario:</label>
+        <input type="text" id="new-name">
+        <button onclick="saveChanges()" class="btn">Guardar Cambios</button>
+    </div>
+</div>
 <script>
     // Cargar datos del usuario desde el backend
     async function loadUserData() {
@@ -99,7 +108,7 @@
         return;
     }
 
-    const confirmDelete = confirm("¿Estás seguro de que quieres eliminar tu cuenta? Esta acción no se puede deshacer.");
+    const confirmDelete = confirm("¿Estás seguro de que quieres eliminar tu cuenta? \nEsta acción no se puede deshacer.");
 
     if (confirmDelete) {
         try {
@@ -125,6 +134,48 @@
     }
 }
 
+function modifyAccount() {
+    document.getElementById("editPopup").style.display = "block";
+    document.getElementById("popupOverlay").style.display = "block"; // Muestra el fondo oscuro
+    document.body.classList.add("no-scroll"); // Bloquea el scroll del fondo
+}
+
+function closePopup() {
+    document.getElementById("editPopup").style.display = "none";
+    document.getElementById("popupOverlay").style.display = "none"; // Oculta el fondo oscuro
+    document.body.classList.remove("no-scroll"); // Permite nuevamente el scroll
+}
+
+async function saveChanges() {
+    const newName = document.getElementById("new-name").value.trim();
+    const email = document.getElementById("user-email").textContent.trim();
+
+    if (!newName) {
+        alert("El nombre no puede estar vacío.");
+        return;
+    }
+
+    try {
+        const response = await fetch(`http://localhost:8080/user/modify/${email}`, {
+            method: "PUT",
+            headers: {
+                "Authorization": "Bearer " + localStorage.getItem("token"),
+                "Content-Type": "application/json"
+            },
+            body: JSON.stringify({ nombre: newName })
+        });
+
+        if (response.ok) {
+            alert("Nombre actualizado con éxito.");
+            document.getElementById("user-name").textContent = newName;
+            closePopup();
+        } else {
+            alert("Error al actualizar el nombre.");
+        }
+    } catch (error) {
+        console.error("Error al actualizar el nombre:", error);
+    }
+}
 
 
     // Cargar datos del usuario al abrir la página
