--- a/src/main/resources/META-INF/resources/UserScreens/UserDataPage.html
+++ b/src/main/resources/META-INF/resources/UserScreens/UserDataPage.html
@@ -17,7 +17,7 @@
     <nav>
         <a href="../HomePage.html">Inicio</a>
         <a href="#">Productos</a>
-        <a href="../ShoppingListPage.html">Mis Listas</a>
+        <a href="../ShoppingListListingPageV2.html">Mis Listas</a>
         <a href="../ReceipeListPage.html">Recetas</a>
         <a href="../ForumPage.html">Foros</a>
     </nav>
