--- a/src/main/resources/META-INF/resources/HomePage.html
+++ b/src/main/resources/META-INF/resources/HomePage.html
@@ -14,7 +14,7 @@
     <nav>
         <a href="HomePage.html">Inicio</a>
         <a href="#">Productos</a>
-        <a href="ShoppingListPage.html">Mis Listas</a>
+        <a href="ShoppingListListingPageV2.html">Mis Listas</a>
         <a href="ReceipeListPage.html">Recetas</a>
         <a href="ForumPage.html">Foros</a>
     </nav>
@@ -33,7 +33,7 @@
             <div class="shopping">
                 <img src="images/shopping-list.png">
             </div>
-            <a href="ShoppingListPage.html">
+            <a href="ShoppingListListingPageV2.html">
                 <button class="btn">Ver mis listas</button>
             </a>
 
