--- a/src/main/resources/META-INF/resources/UserScreens/SignOutPage.html
+++ b/src/main/resources/META-INF/resources/UserScreens/SignOutPage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Cerrar Sesión</title>
-    <link rel="stylesheet" href="../css/userstyles.css">
+    <link rel="stylesheet" href="../css/userdata.css">
 </head>
 <body>
 <header>
