--- a/src/main/resources/META-INF/resources/UserScreens/SignInPage.html
+++ b/src/main/resources/META-INF/resources/UserScreens/SignInPage.html
@@ -12,20 +12,26 @@
             <img src="../images/NutriCelia.png" alt="Logo">
         </a>
     </div>
-    <div class="titulo">
-        <h1>Iniciar sesión</h1>
+    <div class="links">
+        <a href="../InitialPage.html">Inicio</a>
     </div>
 </header>
 <main>
-    <form id="loginForm">
-        <label for="email">Correo Electrónico:</label>
-        <input type="email" id="email" name="email" required>
+    <div class="caja">
+        <h1 class="titulo">Iniciar sesión</h1>
+        <form id="loginForm">
+            <label for="email">Correo Electrónico:</label>
+            <input type="email" id="email" name="email" required>
 
-        <label for="password">Contraseña:</label>
-        <input type="password" id="password" name="password" required>
+            <label for="password">Contraseña:</label>
+            <input type="password" id="password" name="password" required>
 
-        <button type="submit" class="btn">Iniciar Sesión</button>
-    </form>
+            <button type="submit" class="btn">Iniciar Sesión</button>
+        </form>
+        <p>¿No tienes cuenta?
+            <a href="SignUpPage.html" class="btn-login">Regístrate</a>
+        </p>
+    </div>
 </main>
 
 <script>
