--- a/src/main/resources/META-INF/resources/UserScreens/SignUpPage.html
+++ b/src/main/resources/META-INF/resources/UserScreens/SignUpPage.html
@@ -12,23 +12,30 @@
             <img src="../images/NutriCelia.png" alt="Logo">
         </a>
     </div>
-    <div class="titulo">
-        <h1>Registro</h1>
+    <div class="links">
+        <a href="../InitialPage.html"> Inicio </a>
     </div>
 </header>
 <main>
-    <form id="registerForm">
-        <label for="name">Nombre:</label>
-        <input type="text" id="name" name="name" required>
+    <div class = "caja">
+        <h1>Registrarse</h1>
+        <form id="registerForm">
+            <label for="name">Nombre:</label>
+            <input type="text" id="name" name="name" required>
 
-        <label for="email">Correo Electrónico:</label>
-        <input type="email" id="email" name="email" required>
+            <label for="email">Correo Electrónico:</label>
+            <input type="email" id="email" name="email" required>
 
-        <label for="password">Contraseña:</label>
-        <input type="password" id="password" name="password" required>
+            <label for="password">Contraseña:</label>
+            <input type="password" id="password" name="password" required>
 
-        <button type="submit" class="btn">Registrarse</button>
-    </form>
+            <button type="submit" class="btn">Registrarse</button>
+        </form>
+        <p>¿Ya estás registrado?
+            <a href="SignInPage.html" class="btn-login">Iniciar sesión</a>
+        </p>
+    </div>
+
 </main>
 
 <script>
