--- a/src/main/resources/META-INF/resources/UserScreens/SignInPage.html
+++ b/src/main/resources/META-INF/resources/UserScreens/SignInPage.html
@@ -20,7 +20,7 @@
     <div class="caja">
         <h1 class="titulo">Iniciar sesión</h1>
         <form id="loginForm">
-            <label for="email">Correo Electrónico:</label>
+            <label for="email">Correo electrónico:</label>
             <input type="email" id="email" name="email" required>
 
             <label for="password">Contraseña:</label>
