--- a/src/main/resources/META-INF/resources/ProductsList/ProductsList.html
+++ b/src/main/resources/META-INF/resources/ProductsList/ProductsList.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ProductsList</title>
-  <link rel="stylesheet" href="../css/userstyles.css">
+  <link rel="stylesheet" href="../css/userdata.css">
 </head>
 <body>
 <header>
