--- a/src/main/resources/META-INF/resources/BuyListScreens/ShoppingListListingPageV2.html
+++ b/src/main/resources/META-INF/resources/BuyListScreens/ShoppingListListingPageV2.html
@@ -106,7 +106,7 @@
             });
 
             if (responseBuyList.ok && responseUsrAccList.ok) {
-                // window.location.reload(); // Refrescar a la página
+                window.location.reload(); // Refrescar a la página
                 alert("Funciona. En teoria");
             } else {
                 alert("Error al crear la lista. Verifica el nombre.");
