--- a/src/main/resources/META-INF/resources/BuyListScreens/ShoppingListListingPageV2.html
+++ b/src/main/resources/META-INF/resources/BuyListScreens/ShoppingListListingPageV2.html
@@ -121,6 +121,8 @@
 
     async function loadUserData() {
         try {
+            console.log(localStorage.getItem("token"));
+
             const token = localStorage.getItem("token");
             if (!token) {
                 alert("No se encontró el token de autenticación.");
