--- a/src/main/resources/META-INF/resources/ReceipeListPage.html
+++ b/src/main/resources/META-INF/resources/ReceipeListPage.html
@@ -2,9 +2,47 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Receta</title>
+    <link rel="stylesheet" href="css/RecipePage.css">
 </head>
 <body>
-  <h1>Página de lista de recetas</h1>
+    <header>
+        <div class="logo">
+            <img src="images/NutriCelia.png">
+        </div>
+        <nav>
+            <a href="HomePage.html">Inicio</a>
+            <a href="#">Productos</a>
+            <a href="BuyListScreens/ShoppingListListingPageV2.html">Mis Listas</a>
+            <a href="ReceipeListPage.html">Recetas</a>
+            <a href="ForumPage.html">Foros</a>
+        </nav>
+        <div class="user-profile">
+            <img class="menu" src="images/menu-icon.png">
+            <a href="UserScreens/UserDataPage.html">
+                <button class="user-profile"><img src="images/icon-user.png"></button>
+            </a>
+        </div>
+    </header>
+    <main>
+        <h1>Tus recetas</h1>
+
+        <table>
+            <tr>
+                <th>Nombre</th>
+                <th>Descripción</th>
+                <th>Opciones</th>
+            </tr>
+            <tr>
+                <!--Aqui va cada elemento de la lista-->
+                <td>mepicanloscoco</td>
+                <td>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</td>
+                <td>edit delete</td>
+            </tr>
+
+        </table>
+    </main>
+
 </body>
 </html>
